fixed ui on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -313,3 +313,7 @@ body {
     -moz-appearance: none;
     cursor: pointer;
 }
+
+.hadithtextcontainer {
+
+}
